--- a/week5/assignment/rework/index.html
+++ b/week5/assignment/rework/index.html
@@ -26,7 +26,7 @@
     <figure>
         <img src="assets/images/capitol.jpg" width="450" height="174" alt="The American Capitol seen from along the National Mall"/>
         <figcaption>
-            <img src="assets/images/blank.gif" class="flag flag-us" alt="United States" />The American Capitol seen from along the National Mall
+            <i class="flag-us"></i>The American Capitol seen from along the National Mall
         </figcaption>
     </figure>
 
@@ -39,7 +39,7 @@
     <figure>
         <img src="assets/images/mall.jpg" width="450" height="319" alt="The Old Parliament Building and beyond as seen from the Australian War Memorial, Canberra"/>
         <figcaption>
-            <img src="assets/images/blank.gif" class="flag flag-au" alt="Australian flag" />The Old Parliament
+            <i class="flag-au"></i>The Old Parliament
             Building and beyond as seen from the Australian War Memorial, Canberra
         </figcaption>
     </figure>
@@ -53,7 +53,7 @@
     <figure>
         <img src="assets/images/newPH.jpg" width="400" height="216" alt="View of the front of Parliament House, Canberra."/>
         <figcaption>
-            <img src="assets/images/blank.gif" class="flag flag-au" alt="Australian flag" />View of the front
+            <i class="flag-au"></i>View of the front
             of Parliament House, Canberra
         </figcaption>
     </figure>
@@ -64,7 +64,7 @@
     <figure>
         <img src="assets/images/oldPH.jpg" width="400" height="216" alt="View of the front of Old Parliament House, Canberra."/>
         <figcaption>
-            <img src="assets/images/blank.gif" class="flag flag-au" alt="Australian flag" />View of the front
+            <i class="flag-au"></i>View of the front
             of Old Parliament House, Canberra.
         </figcaption>
     </figure>
@@ -82,7 +82,7 @@
     <figure>
         <img src="assets/images/palace-of-westminster.jpg" width="400" height="216" alt="The Palace of Westminster, London"/>
         <figcaption>
-            <img src="assets/images/blank.gif" class="flag flag-gb" alt="UK flag" />The British parliament,
+            <i class="flag-gb"></i>The British parliament,
             surrounded by roads and other buildings.
             Image sources: Palace of Westminster <a href="http://www.bbc.co.uk/radio4/womanshour/01/media/palace-of-westminster.jpg">BBC</a>.
         </figcaption>
@@ -91,7 +91,7 @@
     <figure>
         <img src="assets/images/parliament-building-reichstag.jpg" width="400" height="216" alt="The Reichstag Building, Berlin"/>
         <figcaption>
-            <img src="assets/images/blank.gif" class="flag flag-de" alt="German flag" />The German parliament,
+            <i class="flag-de"></i>The German parliament,
             surrounded by roads and other buildings.
             Image sources: <a href="http://media-cdn.tripadvisor.com/media/photo-s/00/18/bd/9a/parliament-building-reichstag.jpg">Trip
             Advisor</a>.
