--- a/week5/assignment/rework/index.html
+++ b/week5/assignment/rework/index.html
@@ -81,7 +81,7 @@
 
 
 
-    <figure>
+    <figure class="left">
         <img src="assets/images/palace-of-westminster.jpg" width="400" height="267" alt="The Palace of Westminster, London"/>
         <figcaption>
             <i class="flag-gb"></i>The British parliament,
@@ -90,7 +90,7 @@
         </figcaption>
     </figure>
 
-    <figure>
+    <figure class="right">
         <img src="assets/images/parliament-building-reichstag.jpg" width="400" height="300" alt="The Reichstag Building, Berlin"/>
         <figcaption>
             <i class="flag-de"></i>The German parliament,
