--- a/week5/assignment/rework/index.html
+++ b/week5/assignment/rework/index.html
@@ -24,7 +24,9 @@
         artificial constructs, built on land that would quite likely otherwise be largely uninhabited by humans.</p>
 
     <figure>
-        <img src="assets/images/capitol.jpg" width="400" height="155" alt="The American Capitol seen from along the National Mall"/>
+        <a href="assets/images/capitol.jpg" title="Open good resolution image of Capitol">
+            <img src="assets/php/thimthumb.php?src=assets/images/capitol.jpg&q=50" width="100" height="100" alt="The American Capitol seen from along the National Mall"/>
+        </a>
         <figcaption>
             <i class="flag-us"></i>The American Capitol seen from along the National Mall
         </figcaption>
@@ -37,7 +39,9 @@
         others between).</p>
 
     <figure>
-        <img src="assets/images/mall.jpg" width="400" height="284" alt="The Old Parliament Building and beyond as seen from the Australian War Memorial, Canberra"/>
+        <a href="assets/images/mall.jpg" title="Open good resolution image of The Old Parliament Building">
+            <img src="assets/php/thimthumb.php?src=assets/images/mall.jpg&q=50" width="100" height="100" alt="The Old Parliament Building and beyond as seen from the Australian War Memorial, Canberra"/>
+        </a>
         <figcaption>
             <i class="flag-au"></i>The Old Parliament
             Building and beyond as seen from the Australian War Memorial, Canberra
@@ -51,7 +55,9 @@
         century).</p>
 
     <figure>
-        <img src="assets/images/newPH.jpg" width="400" height="216" alt="View of the front of Parliament House, Canberra."/>
+        <a href="assets/images/newPH.jpg" title="Open good resolution image of Parliament House">
+            <img src="assets/php/thimthumb.php?src=assets/images/newPH.jpg&q=50" width="100" height="100" alt="View of the front of Parliament House, Canberra."/>
+        </a>
         <figcaption>
             <i class="flag-au"></i>View of the front
             of Parliament House, Canberra
@@ -62,7 +68,9 @@
         War Memorial.</p>
 
     <figure>
-        <img src="assets/images/oldPH.jpg" width="400" height="213" alt="View of the front of Old Parliament House, Canberra."/>
+        <a href="assets/images/oldPH.jpg" title="Open good resolution image of Old Parliament House">
+            <img src="assets/php/thimthumb.php?src=assets/images/oldPH.jpg&q=50" width="100" height="100" alt="View of the front of Old Parliament House, Canberra."/>
+        </a>
         <figcaption>
             <i class="flag-au"></i>View of the front
             of Old Parliament House, Canberra.
@@ -82,7 +90,9 @@
 
 
     <figure class="left">
-        <img src="assets/images/palace-of-westminster.jpg" width="400" height="267" alt="The Palace of Westminster, London"/>
+        <a href="assets/images/palace-of-westminster.jpg" title="Open good resolution image of The Palace of Westminster">
+            <img src="assets/php/thimthumb.php?src=assets/images/palace-of-westminster.jpg&q=50" width="100" height="100" alt="The Palace of Westminster, London"/>
+        </a>
         <figcaption>
             <i class="flag-gb"></i>The British parliament,
             surrounded by roads and other buildings.
@@ -91,7 +101,9 @@
     </figure>
 
     <figure class="right">
-        <img src="assets/images/parliament-building-reichstag.jpg" width="400" height="300" alt="The Reichstag Building, Berlin"/>
+        <a href="assets/images/parliament-building-reichstag.jpg" title="Open good resolution image of The Reichstag Building">
+            <img src="assets/php/thimthumb.php?src=assets/images/parliament-building-reichstag.jpg&q=50" width="100" height="100" alt="The Reichstag Building, Berlin"/>
+        </a>
         <figcaption>
             <i class="flag-de"></i>The German parliament,
             surrounded by roads and other buildings.
