--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
                     </li>
                 </ul>
             </li><!-- /week 5 -->
-            <li>Week 6</li><!-- /week 6 -->
+            <li>Week 6
+                <ul>
+                    <li>Assignment
+                        <ul>
+                            <li><a href="week6/assignment/page.php" title="Assignment 6A">Assignment 6A</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li><!-- /week 6 -->
             <li>Week 7</li><!-- /week 7 -->
             <li>Week 8</li><!-- /week 8 -->
         </ul>
