--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -9,19 +9,20 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 </head>
-<body onload="isLocalStorageSupported();">
+<body>
 
 <h1>Find the number that Alfred choose</h1>
 
 <p>Alfred, chooses a number between one and ten. You must find it soon.</p>
 
-<p>Alfred choose <span id="alfredNumber">X</span></p>
+<p>Alfred choose : <span id="alfredNumber">X</span></p>
 
 <p>Your score : <span id="score">X</span></p>
 
 <ul>
-    <li><a id="choose-1" href="#">One</a></li>
-    <li><a id="choose-2" href="#">Two</a></li>
+    <li><a id="choose-1" href="javascript:attempt(0)">Zero</a></li>
+    <li><a id="choose-1" href="javascript:attempt(1)">One</a></li>
+    <li><a id="choose-2" href="javascript:attempt(2)">Two</a></li>
     <li><a id="choose-3" href="#">Three</a></li>
     <li><a id="choose-4" href="#">Four</a></li>
     <li><a id="choose-5" href="#">Five</a></li>
@@ -29,10 +30,9 @@
     <li><a id="choose-7" href="#">Seven</a></li>
     <li><a id="choose-8" href="#">Eight</a></li>
     <li><a id="choose-9" href="#">Nine</a></li>
-    <li><a id="choose-10" href="#">Ten</a></li>
 </ul>
 
-<p><a href="javascript:localStorage.clear()">Clear</a></p>
+<p><a href="javascript:localStorage.clear();">Clear</a></p>
 
 </body>
 </html>
