--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -21,9 +21,9 @@
 <p>Your score : <span id="score">X</span></p>
 
 <ul>
-    <li><a id="choose-0" href="javascript:attempt(0)">Zero</a></li>
-    <li><a id="choose-1" href="javascript:attempt(1)">One</a></li>
-    <li><a id="choose-2" href="javascript:attempt(2)">Two</a></li>
+    <li><a id="choose-0" href="#">Zero</a></li>
+    <li><a id="choose-1" href="#">One</a></li>
+    <li><a id="choose-2" href="#">Two</a></li>
     <li><a id="choose-3" href="#">Three</a></li>
     <li><a id="choose-4" href="#">Four</a></li>
     <li><a id="choose-5" href="#">Five</a></li>
@@ -33,7 +33,7 @@
     <li><a id="choose-9" href="#">Nine</a></li>
 </ul>
 
-<p><a href="javascript:localStorage.clear();">Clear</a></p>
+<p><a id="clearStorage" href="javascript:localStorage.clear();">Clear</a></p>
 
 </body>
 </html>
