try to fix reset()

--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -14,9 +14,9 @@
 
 <h1>Find the number that Alfred choose</h1>
 
-<p>Alfred, chooses a number between one and ten. You must find it soon.</p>
+<p>Alfred, chooses a number between one and ten. You must find it.</p>
 
-<p>Alfred choose : <span id="alfredNumber">X</span></p>
+<p>(That's for the dev.) Alfred choose : <span id="alfredNumber">X</span></p>
 
 <p>Your score : <span id="score">X</span></p>
 
@@ -33,7 +33,7 @@
     <li><a id="choose-9" href="#">Nine</a></li>
 </ul>
 
-<p><a id="clearStorage" href="javascript:localStorage.clear();">Clear</a></p>
+<p><a id="reset" href="javascript:localStorage.clear();">Clear</a></p>
 
 </body>
 </html>
