add assignment 7 on the homepage navigation

--- a/index.html
+++ b/index.html
@@ -88,7 +88,15 @@
                     </li>
                 </ul>
             </li><!-- /week 6 -->
-            <li>Week 7</li><!-- /week 7 -->
+            <li>Week 7
+                <ul>
+                    <li>Assignment
+                        <ul>
+                            <li><a href="week7/assignment/index.html" title="Assignment 7A">Assignment 7A</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li><!-- /week 7 -->
             <li>Week 8</li><!-- /week 8 -->
         </ul>
     </nav>
