fix double reset()

--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -33,7 +33,7 @@
     <li><a id="choose-9" href="#">Nine</a></li>
 </ul>
 
-<p><a id="reset" href="javascript:localStorage.clear();">Clear</a></p>
+<p><a id="reset" href="#">Clear</a></p>
 
 </body>
 </html>
