--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -6,6 +6,8 @@
     <script src="assets/js/modernizr-2.5.3.min.js" type="text/javascript"></script>
     <script src="assets/js/script.js" type="text/javascript"></script>
 
+    <link rel="stylesheet" href="assets/css/mobile.css" media="screen" />
+
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
