--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <title>Choose a number</title>
     <script src="assets/js/modernizr-2.5.3.min.js" type="text/javascript"></script>
+    <!--
+    dev
     <script src="assets/js/script.js" type="text/javascript"></script>
+    -->
 
     <link rel="stylesheet" href="assets/css/mobile.css" media="screen" />
 
