--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8">
     <title>Choose a number</title>
     <script src="assets/js/modernizr-2.5.3.min.js" type="text/javascript"></script>
-    <!--
-    dev
     <script src="assets/js/script.js" type="text/javascript"></script>
-    -->
 
     <link rel="stylesheet" href="assets/css/mobile.css" media="screen" />
 
@@ -16,9 +13,9 @@
     <![endif]-->
 </head>
 <body>
-
-<h1>Find the number that Alfred choose</h1>
-
+<header>
+    <h1>Find Alfred's number !</h1>
+</header>
 <p>Alfred, chooses a number between one and ten. You must find it.</p>
 
 <p>(That's for the dev.) Alfred choose : <span id="alfredNumber">X</span></p>
@@ -37,8 +34,10 @@
     <li><a id="choose-8" href="#">Eight</a></li>
     <li><a id="choose-9" href="#">Nine</a></li>
 </ul>
+<p class="bottom top"><a id="reset" href="#">Clear</a></p>
 
-<p><a id="reset" href="#">Clear</a></p>
-
+<footer>
+    <p class="top"><a class="backToTop" href="#" title="Back to top">Back to top</a></p>
+</footer>
 </body>
 </html>
