--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Choose a number</title>
+
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+
     <script src="assets/js/modernizr-2.5.3.min.js" type="text/javascript"></script>
     <script src="assets/js/script.js" type="text/javascript"></script>
 
