--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -8,7 +8,6 @@
 
         <script src="assets/js/modernizr-2.5.3.min.js" type="text/javascript"></script>
 
-
         <link rel="stylesheet" href="assets/css/mobile.css" media="screen"/>
 
         <!--[if lt IE 9]>
@@ -37,7 +36,7 @@
             <li><a id="choose-8" href="#">Eight</a></li>
             <li><a id="choose-9" href="#">Nine</a></li>
         </ul>
-        <p class="bottom top"><a id="reset" href="#">Clear</a></p>
+        <p class="bottom top"><a id="reset" href="#">Restart game</a></p>
 
         <footer>
             <p class="top"><a class="backToTop" href="#" title="Back to top">Back to top</a></p>
