improve result view

--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -20,11 +20,11 @@
         </header>
         <p>Alfred, chooses a number between one and ten. You must find it.</p>
 
-        <p>(That's for the dev.) Alfred choose : <span id="alfredNumber">X</span></p>
-
         <p>Your score : <span id="score">X</span></p>
+        
+        <p id="congrat" class="hide"><strong>You found it !</strong> Alfred choose the <span id="alfredNumber">X</span></p>
 
-        <ul>
+        <ul id="list">
             <li><a id="choose-0" href="#">Zero</a></li>
             <li><a id="choose-1" href="#">One</a></li>
             <li><a id="choose-2" href="#">Two</a></li>
