--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="assets/manifest/offline.appcache">
+<html lang="en" manifest="offline.appcache">
     <head>
         <meta charset="utf-8">
         <title>Choose a number</title>
