add a offline.html page
close #1

--- a/week7/assignment/offline.html
+++ b/week7/assignment/offline.html
@@ -9,7 +9,8 @@
     </head>
     <body>
     
-        <h1>Offline</h1>
-        <p>Sorry but </p>
+        <h1>It seems that you have no connection.</h1>
+        <p>This game requiere some files that are not cached on your browser</p>
+
     </body>
 </html>
