--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -18,29 +18,33 @@
         <header>
             <h1>Find Alfred's number !</h1>
         </header>
-        <p>Alfred, chooses a number between one and ten. You must find it.</p>
 
-        <p>Your score : <span id="score">X</span></p>
-        
-        <p id="congrat" class="hide"><strong>You found it !</strong> Alfred choose the <span id="alfredNumber">X</span></p>
+        <!-- container -->
+        <div class="container">
+            <p>Alfred, chooses a number between one and ten. You must find it.</p>
 
-        <ul id="list">
-            <li><a id="choose-0" href="#">Zero</a></li>
-            <li><a id="choose-1" href="#">One</a></li>
-            <li><a id="choose-2" href="#">Two</a></li>
-            <li><a id="choose-3" href="#">Three</a></li>
-            <li><a id="choose-4" href="#">Four</a></li>
-            <li><a id="choose-5" href="#">Five</a></li>
-            <li><a id="choose-6" href="#">Six</a></li>
-            <li><a id="choose-7" href="#">Seven</a></li>
-            <li><a id="choose-8" href="#">Eight</a></li>
-            <li><a id="choose-9" href="#">Nine</a></li>
-        </ul>
-        <p class="bottom top"><a id="reset" href="#">Restart game</a></p>
+            <p>Your score : <span id="score">X</span></p>
 
-        <footer>
-            <p class="top"><a class="backToTop" href="#" title="Back to top">Back to top</a></p>
-        </footer>
+            <p id="congrat" class="hide"><strong>You found it !</strong> Alfred choose the <span id="alfredNumber">X</span></p>
+
+            <ul id="list">
+                <li><a id="choose-0" href="#">Zero</a></li>
+                <li><a id="choose-1" href="#">One</a></li>
+                <li><a id="choose-2" href="#">Two</a></li>
+                <li><a id="choose-3" href="#">Three</a></li>
+                <li><a id="choose-4" href="#">Four</a></li>
+                <li><a id="choose-5" href="#">Five</a></li>
+                <li><a id="choose-6" href="#">Six</a></li>
+                <li><a id="choose-7" href="#">Seven</a></li>
+                <li><a id="choose-8" href="#">Eight</a></li>
+                <li><a id="choose-9" href="#">Nine</a></li>
+            </ul>
+            <p class="bottom top"><a id="reset" href="#">Restart game</a></p>
+
+            <footer>
+                <p class="top"><a class="backToTop" href="#" title="Back to top">Back to top</a></p>
+            </footer>
+        </div><!-- /container -->
     </body>
     <script src="assets/js/script.js" type="text/javascript"></script>
 </html>
