--- a/week7/assignment/index.html
+++ b/week7/assignment/index.html
@@ -28,18 +28,18 @@
             <p id="congrat" class="hide"><strong>You found it !</strong> Alfred choose the <span id="alfredNumber">X</span></p>
 
             <ul id="list">
-                <li><a id="choose-0" href="#">Zero</a></li>
-                <li><a id="choose-1" href="#">One</a></li>
-                <li><a id="choose-2" href="#">Two</a></li>
-                <li><a id="choose-3" href="#">Three</a></li>
-                <li><a id="choose-4" href="#">Four</a></li>
-                <li><a id="choose-5" href="#">Five</a></li>
-                <li><a id="choose-6" href="#">Six</a></li>
-                <li><a id="choose-7" href="#">Seven</a></li>
-                <li><a id="choose-8" href="#">Eight</a></li>
-                <li><a id="choose-9" href="#">Nine</a></li>
+                <li><a id="choose-0" href="#" title="Choose number zero">Zero</a></li>
+                <li><a id="choose-1" href="#" title="Choose number one">One</a></li>
+                <li><a id="choose-2" href="#" title="Choose number two">Two</a></li>
+                <li><a id="choose-3" href="#" title="Choose number three">Three</a></li>
+                <li><a id="choose-4" href="#" title="Choose number four">Four</a></li>
+                <li><a id="choose-5" href="#" title="Choose number five">Five</a></li>
+                <li><a id="choose-6" href="#" title="Choose number six">Six</a></li>
+                <li><a id="choose-7" href="#" title="Choose number seven">Seven</a></li>
+                <li><a id="choose-8" href="#" title="Choose number eight">Eight</a></li>
+                <li><a id="choose-9" href="#" title="Choose number nine">Nine</a></li>
             </ul>
-            <p class="bottom top"><a id="reset" href="#">Restart game</a></p>
+            <p class="bottom top"><a id="reset" href="#" title="Start a new game">Restart game</a></p>
 
             <footer>
                 <p class="top"><a class="backToTop" href="#" title="Back to top">Back to top</a></p>
